# tgJNI

./: README.md  settings.gradle
app/: build.gradle
app/jni/: CMakeLists.txt  SqliteWrapper.cpp  TgNetWrapper.cpp  native-lib.cpp
app/jni/tgnet/: BuffersStorage.cpp  ByteArray.cpp  ConnectionsManager.cpp  NativeByteBuffer.cpp
app/src/androidTest/java/com/example/tgJNI/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/tgJNI/: DecryptUtiles.java  MainActivity.java  MessageStorage.java  MyDatabaseHelper.java  MyService.java  ShellUtils.java  UserDBHelper.java  UserInfo.java
app/src/main/java/com/example/tgJNI/SQLite/: SQLiteCursor.java  SQLiteDatabase.java  SQLiteException.java  SQLitePreparedStatement.java
app/src/main/java/com/example/tgJNI/tgnet/: AbstractSerializedData.java  NativeByteBuffer.java  TLObject.java  TLRPC.java  WriteToSocketDelegate.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/tgJNI/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
